<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">职场吐槽</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="see_detail">查看详情</string>
    <string name="edit_infor">编辑详情</string>
    <string name="my_infor">我的信息</string>
    <string name="individual_center">个人中心</string>
    <string name="world_rank">排行榜</string>
    <string name="industry_rank">行业排行</string>
    <string name="company_rank">公司排行</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="logout">注销</string>
    <string name="email">邮箱</string>
    <string name="pwd">密码</string>
    <string name="ensure_pwd">确认密码</string>
    <string name="nick_name">昵称</string>
	<string name="new_tellout_input_hint">吐槽我的钱包瘦身史\n\n您的吐槽会即刻发表，禁止包含政治、色情内容.否则将会被管理员即刻删除</string>
    <string name="share_score">分享给小伙伴</string>
    <string name= "about">\n特色功能：\n\n1.各种吐槽\n2.薪资排行榜\n3.公司薪资排行（尚未开放）\n4.行业薪资排行（尚未开放）\n\n
        注:用户禁止使用本软件做一些违法乱纪的事情，一经发现，本软件将有权利终止该用户的使用。图片均来自网络 如有侵犯请联系我删除，联系方式qq:1210337999\n\n
    </string>
</resources>
