<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/yellow"
     >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_normal" >
		
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="20dp"
            android:padding="10dp"
            android:text="吐槽" />
 	<android.widget.ImageView
	        android:id="@+id/back"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        android:layout_marginLeft="5dp"
	        android:clickable="true"
	        android:src="@drawable/selector_back" />
        
    </RelativeLayout>
	<ImageView 
	    android:id="@+id/imageView1"
	    android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginTop="-2dp"
        android:background="@drawable/bg_dplus"
        
	    />
    <ImageView
        android:id="@+id/login_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_icon"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <EditText
            android:id="@+id/login_regist_ededitText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/email"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/login_regist_ededitText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/pwd"
            android:singleLine="true" >
        </EditText>

        <EditText
            android:id="@+id/login_regist_ededitText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/pwd"
            android:inputType="textPassword"
            android:visibility="gone"
            android:singleLine="true" >

        </EditText>

        <EditText
            android:id="@+id/login_regist_ededitText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/ensure_pwd"
            android:inputType="textPassword"
            android:visibility="gone"
            android:singleLine="true" >
        </EditText>

        <CheckBox
            android:id="@+id/login_regist_checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="自动登录" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/login_regist_left_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/regist"
                android:background="@drawable/selector_white_btn"
                 />
             <Button
                android:id="@+id/login_regist_right_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/login" 
                android:background="@drawable/selector_yellow_btn"
                />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>